# echolink

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
docs/: index.html
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: ApiSettings.spec.js  App.spec.js  Dashboard.spec.js  History.spec.js  setup.js
src/i18n/: index.js
src/i18n/locales/: en.js  zh.js
src/views/: ApiSettings.vue  Dashboard.vue  History.vue  OverlayIndicator.vue
