[package]
name = "echolink"
version = "0.1.0"
description = "Echolink - 语音输入法桌面应用"
authors = ["stupidloud"]
license = ""
repository = "https://github.com/stupidloud/echolink"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
enigo = { version = "0.3", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures-util = "0.3"
